# gni

./: Cargo.toml  Makefile  README.md  go.mod  go.work  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: python-build.yml
src/: build.rs  constants.rs  lib.rs  main.rs
src/c/: GNI.c  GNI.h  Makefile  main.c  mod.rs
src/cpp/: GNI.cpp  GNI.h  README.md  main.cpp  mod.rs
src/go/: README.md  go.mod  main.go
src/go/cgo/: cgo.go
src/python/: README.md  main.py  mod.rs  python_py_ext.pyi
