[package]
name = "gni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gni_py"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nvml-wrapper = "0.10.0"
blake3 = "1.5.4"
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
