# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.

# This source code is licensed under the license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "gni"
version = "0.1.0"
description = "Library to get a GPU Node ID"
requires-python = ">=3.10"
